kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genomex
  labels:
    name: genomex
    environment: production
